--- a/style.css
+++ b/style.css
@@ -4,17 +4,17 @@
   box-sizing: border-box;
 }
 body {
-  background: url("/images/atm.jpg");
+  background: url('/images/atm.jpg');
 
   height: 100vh;
   display: grid;
   place-items: center;
   position: relative;
-  font-family: "Mulish", sans-serif;
+  font-family: 'Mulish', sans-serif;
 }
 body::before {
   background-color: rgba(0, 0, 0, 0.8);
-  content: "";
+  content: '';
   display: block;
   height: 100vh;
   position: absolute;
@@ -71,13 +71,21 @@ img {
   transform: skewY(-10deg);
 }
 .card-body .card-content {
-  padding: 1rem 1.5rem;
   border-top: 2px solid #32cd32;
   height: 70px;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
+  padding-right: 1rem;
 }
+
+.skewCard2 .card-content {
+  justify-content: flex-end;
+  text-align: right;
+  padding-left: 1rem;
+  padding-right: 0;
+}
+
 .card-body .card-content:nth-last-child(1) {
   border-bottom: 2px solid #32cd32;
 }
@@ -88,9 +96,23 @@ img {
 .card-body .card-content span img {
   margin-right: 0.7rem;
 }
+
+.skewCard2 .card-content span img {
+  margin-right: 0;
+  margin-left: 0.7rem;
+}
+
 .card-footer {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
   text-align: center;
   padding: 1.5rem 0;
+}
+
+.card-footer img {
+  margin-right: 0.5rem;
 }
 
 @media screen and (max-width: 450px) {
