--- a/style.css
+++ b/style.css
@@ -4,17 +4,17 @@
   box-sizing: border-box;
 }
 body {
-  background: url('/images/atm.jpg');
+  background: url("/images/atm.jpg");
 
   height: 100vh;
   display: grid;
   place-items: center;
   position: relative;
-  font-family: 'Mulish', sans-serif;
+  font-family: "Mulish", sans-serif;
 }
 body::before {
   background-color: rgba(0, 0, 0, 0.8);
-  content: '';
+  content: "";
   display: block;
   height: 100vh;
   position: absolute;
@@ -29,7 +29,7 @@ a {
   color: #ffffff;
 }
 img {
-  width: 1.5rem;
+  width: 2.2rem;
 }
 .container {
   background: rgba(0, 0, 0, 0.7);
